@@ -1,4 +1,5 @@
 0.9.0 (currently working on)
+- [#2948] Change: Change the payment methods field in table tx_seminars_seminars to an unsigned integer
 - [#2956] Fix: Two tests failures in seminars_pi1 testcase
 - [#2963] Fix: Registration crashes with fatal error
 - [#2923] Feature: In the list view, show registration begin date for events with registration_begin_date in future
